[gd_scene load_steps=2 format=3 uid="uid://b0cutin5hwilp"]

[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Event Tools.gd" id="1"]

[node name="Event Tools" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Edit_Event_Button" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Edit Event"

[node name="Assign_Function" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Assign Function"

[connection signal="button_up" from="HBoxContainer/Edit_Event_Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="HBoxContainer/Assign_Function" to="." method="_on_assign_function_button_up"]
